User manual, fill "Runtime errors" list

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1563,6 +1563,10 @@ When a runtime error is encountered, an exception is raised and \imitator{} term
 The possible runtime errors include:
 \begin{itemize}
 	\item division by~0;
+	\item non-integer division on integer expression
+	\item index out of range
+	\item empty collection
+	\item
 	% TODO
 \end{itemize}
 
