Move to IMITATOR 3.4 Cheese Durian

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -75,7 +75,7 @@
 \fancyhead[r]{%
 	\includegraphics[height=1em]{../logos/imitator-500.png}
 	\includegraphics[height=1em]{../logos/logo-3-300.png}
-	\includegraphics[height=1em]{../logos/logo-3-3-300.png}
+	\includegraphics[height=1em]{../logos/logo-3-4-300.png}
 }
 
 \renewcommand{\headrulewidth}{.1pt}
@@ -287,8 +287,8 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{3.3}
-\newcommand{\imitatorversionname}{Cheese Caramel au beurre salé}
+\newcommand{\imitatorversion}{3.4-beta}
+\newcommand{\imitatorversionname}{Cheese Durian}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
