--- a/doc/graphics-credits.tex
+++ b/doc/graphics-credits.tex
@@ -3,6 +3,7 @@
 
 \newcommand{\ccbythree}{\href{https://creativecommons.org/licenses/by/3.0/}{\includegraphics[width=.15\textwidth]{cc-by.png}}}
 \newcommand{\ccbysathree}{\href{https://creativecommons.org/licenses/by-sa/3.0/}{\includegraphics[width=.15\textwidth]{CC-BY-SA_500.png}}}
+\newcommand{\ccbysafour}{\href{https://creativecommons.org/licenses/by-sa/4.0/}{\includegraphics[width=.15\textwidth]{CC-BY-SA_500.png}}}
 \newcommand{\cczero}{\href{https://creativecommons.org/publicdomain/zero/1.0/}{\includegraphics[width=.15\textwidth]{cc-zero.png}}}
 \newcommand{\publicdomain}{\includegraphics[width=.15\textwidth]{publicdomain.png}}
 
@@ -50,6 +51,9 @@
 	%------------------------------------------------------------
 	\\\hline
 	version 3.3 & \includegraphics[width=.15\textwidth]{logo-3-3-300.png} & \href{https://commons.wikimedia.org/wiki/File:Caramels.jpg}{A pile of loose caramels} & Evan-Amos & \ccbysathree{}
+	%------------------------------------------------------------
+	\\\hline
+	version 3.4 & \includegraphics[width=.15\textwidth]{logo-3-4-300.png} & \href{https://commons.wikimedia.org/wiki/File:D24_-_Durian.jpg}{Durian} & Royleeyy & \ccbysafour{}
 	%------------------------------------------------------------
 	\\\hline
 \end{longtable}
